--- a/projects/website/src/app/features/workshops/angular-state-management/angular-state-management.component.scss
+++ b/projects/website/src/app/features/workshops/angular-state-management/angular-state-management.component.scss
@@ -11,7 +11,11 @@
 
   .wrapper {
     display: flex;
-    margin: 50px 0 40px 0;
+    margin: 0 0 40px 0;
+
+    &:first-of-type {
+      margin-top: 50px;
+    }
 
     &:last-of-type {
       margin: 0 0 0 0;
